syntax = "proto3";
package commonCache;

service CommonCache {
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {};
  rpc UpdateUserCache (UpdateUserCacheRequest) returns (GeneralResponse) {};
}

message Empty {
}

message GeneralResponse {
  bool is_success = 1;
  string error = 2;
}

message GetUserRequest {
  string user_id = 1; // user Object Id
  string cognito_id = 2; // cognito sub
  bool get_facilities = 3;
}

message GetUserResponse {
  message ProfileCompletedStatus {
    bool telemed = 1;
    bool cardiac = 2;
    bool bioheart = 3;
  }

  message User {
    string id = 1;
    string cognito_id = 2;
    string username = 3;
    string email = 4;
    string role = 5;
    repeated string roles = 6;
  
    string first_name = 7;
    string last_name = 8;
    bool is_test_account = 9;
    ProfileCompletedStatus is_profile_completed = 10;
  }

  bool is_success = 1;
  string error = 2;
  User user_info = 3;
  repeated string facility_ids = 4;
}

message UpdateUserCacheRequest {
  string user_id = 1;
  string username = 2;
  string role = 3;
}


